# gnu_linux_dev

./: README.md
01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile  prog.c
03_Text/: randomize.sh
04_Debugging/: Makefile  range.c  script1.gdb  script2.gdb
05_Regexps/: Makefile  esub.c
06_Tracing/: Makefile  move.c  my_remove.c
07_Environmental/: Makefile.am  configure.ac  rhasher.c
08_I18n/: Makefile.am  configure.ac  main.c  ru.po
09_PatchDiff/: Makefile  main.c  patch1.patch  patch2.patch  patch3.patch
10_LibTesting/: Makefile.am  configure.ac
10_LibTesting/src/: Makefile.am  buf.c  buf.h  libbuf.c
10_LibTesting/tests/: Makefile.am  defs.h  test_grow.c  test_init.c  test_nullptr.c  test_pop.c  test_push.c
11_Documenting/: Doxyfile.in  Makefile  Makefile.am  configure.ac  guesser.c  ru.po
12_InstallPackaging/: Doxyfile.in  Makefile.am  configure.ac  guesser.c  ru.po
12_InstallPackaging/po/: ru.po
12_InstallPackaging/src/: Makefile.am  guesser.c  libroman.c  roman.h  ru.po
12_InstallPackaging/tests/: Makefile.am  defs.h  test_d2r.c  test_r2d.c
